Cannot delete keyframe of animated simulation parameter if simulation has been disabled #36919

Closed
opened 2013-10-02 01:17:24 +02:00 by Anton Zeltser · 5 comments

%%%--- Operating System, Graphics card ---

Windows 7 x64, EVGA GTX570 2.5GB

- Blender version with error, and version that worked ---

2.68.5 ("Fastest build from graphicall" r60374)

- Short description of error ---

When selecting any object and making it part of a simulation, you can animate simulation parameters. If, however, you remove the simulation from a given object you then cannot delete the keyframe without re-enabling the simulation.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Create any mesh (UVSphere used in example).
  2. Go to Physics tab in item properties.
  3. Enable "rigid body".
  4. Hover over "Animated" checkmark field and hit the i key to insert animation keyframe.
  5. Click the X by "Rigid Body" to disable the simulation.
  6. In the 3D viewer, hit ALT+i to delete the keyframe for the given object.

Receive the following error: "Could not delete keyframe, as RNA path is invalid for the given ID (ID = OBSphere, path = rigid_body.kinematic)"

  1. Correct error by repeating step 3 and then step 6.

%%%

%%%--- Operating System, Graphics card --- Windows 7 x64, EVGA GTX570 2.5GB - Blender version with error, and version that worked --- 2.68.5 ("Fastest build from graphicall" r60374) - Short description of error --- When selecting any object and making it part of a simulation, you can animate simulation parameters. If, however, you remove the simulation from a given object you then cannot delete the keyframe without re-enabling the simulation. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1) Create any mesh (UVSphere used in example). 2) Go to Physics tab in item properties. 3) Enable "rigid body". 4) Hover over "Animated" checkmark field and hit the i key to insert animation keyframe. 5) Click the X by "Rigid Body" to disable the simulation. 6) In the 3D viewer, hit ALT+i to delete the keyframe for the given object. Receive the following error: "Could not delete keyframe, as RNA path is invalid for the given ID (ID = OBSphere, path = rigid_body.kinematic)" 7) Correct error by repeating step 3 and then step 6. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%attached a fix, though not sure this is really a bug,

the current function requires RNA paths to be valid before removing.
though this can be worked around (as is done in the patch).%%%

%%%attached a fix, though not sure this is really a bug, the current function requires RNA paths to be valid before removing. though this can be worked around (as is done in the patch).%%%
Member

%%%LGTM%%%

%%%LGTM%%%

%%%fixed r60506.%%%

%%%fixed r60506.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36919
No description provided.