fix [#36919] Cannot delete keyframe of animated simulation parameter if simulation has been disabled